@@ -9,7 +9,7 @@
 <meta content="Mozilla/4.78 [en] (Windows NT 5.0; U) [Netscape]" name=
 "GENERATOR" />
 <link rel="StyleSheet" type="text/css" href="layout1.css" />
-<title>SNMP Trap Translator v1.1beta2</title>
+<title>SNMP Trap Translator v1.1</title>
 </head>
 <body>
 <h1>SNMPTT FAQ / Troubleshooting</h1>
