@@ -1,8 +1,8 @@
 #!/usr/bin/perl
 #
-# SNMPTTHANDLER v1.1beta2
+# SNMPTTHANDLER v1.1
 #
-# Copyright 2002-2005 Alex Burger
+# Copyright 2002-2006 Alex Burger
 # alex_b@users.sourceforge.net
 # 8/26/2002
 #
@@ -190,8 +190,8 @@ while (defined($line = <>))
 
 sub showversion
 {
-	printf "\nSNMPTTHANDLER v1.1beta2\n";
-	printf "(c) 2002-2005 Alex Burger\n\n";
+	printf "\nSNMPTTHANDLER v1.1\n";
+	printf "(c) 2002-2006 Alex Burger\n\n";
 }
 
 ##############################################################################
