@@ -1,3 +1,6 @@
+Jan 17th, 2006: Alex Burger <alex_b@users.sourceforge.net>
+- Changed version to snmptt_1.1
+
 Dec 31st, 2005: Alex Burger <alex_b@users.sourceforge.net>
 - Clean up white space formatting of code.
 
